[package]
name = "tomato"
version = "1.0.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
confy = "0.6.1"
dirs = "6.0.0"
notify-rust = "4.11.3"
ratatui = { version = "0.28.0", features = ["widget-calendar"] }
rusqlite = { version = "0.37.0", features = ["bundled", "time"] }
serde = { version = "1.0.215", features = ["derive"] }
time = "0.3.44"
tui-input = "0.15.0"
